--- a/Films.html
+++ b/Films.html
@@ -21,7 +21,7 @@
 				<!-- Header -->
 				<!-- Note: The "styleN" class below should match that of the banner element. -->
 					<header id="header" class="alt style2">
-						<a href="hasanalrashed.com" class="logo"><span class="logoFont">Hasan Al-Rashed</span></a>
+						<a href="/">Home< class="logo"><span class="logoFont">Hasan Al-Rashed</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
