--- a/Films.html
+++ b/Films.html
@@ -30,7 +30,7 @@
 				<!-- Menu -->
 				<nav id="menu">
 					<ul class="links">
-						<li><a href="index.html">Home</a></li>
+						<li><a href="/">Home</a></li>
 						<li><p class="currentlyOnPage">Films</p></li>
 						<li><a href="About.html">About</a></li>
 						<li><a href="Contact.html">Contact</a></li>
