--- a/Contact.html
+++ b/Contact.html
@@ -25,7 +25,7 @@
 
 				<!-- Header -->
 				<header id="header">
-					<a href="index.html" class="logo"><span class="logoFont">Hasan Al-Rashed</span></a>
+					<a href="/" class="logo"><span class="logoFont">Hasan Al-Rashed</span></a>
 					<nav>
 						<a href="#menu">Menu</a>
 					</nav>
@@ -34,7 +34,7 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="index.html">Home</a></li>
+							<li><a href="/">Home</a></li>
 							<li><a href="Films.html">Films</a></li>
 							<li><a href="About.html">About</a></li>
 							<li><p class="currentlyOnPage">Contact</p></li>
