--- a/About.html
+++ b/About.html
@@ -21,7 +21,7 @@
 				<!-- Header -->
 				<!-- Note: The "styleN" class below should match that of the banner element. -->
 					<header id="header" class="alt style2">
-						<a href="index.html" class="logo"><span class="logoFont">Hasan Al-Rashed</span></a>
+						<a href="/" class="logo"><span class="logoFont">Hasan Al-Rashed</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -30,7 +30,7 @@
 				<!-- Menu -->
 				<nav id="menu">
 					<ul class="links">
-						<li><a href="index.html">Home</a></li>
+						<li><a href="/">Home</a></li>
 						<li><a href="Films.html">Films</a></li>
 						<li><p class="currentlyOnPage">About</p></li>
 						<li><a href="Contact.html">Contact</a></li>
