--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><p class="currentlyOnPage">Home</p></li>
-							<li><a href="Films.html">Films</a></li>
-							<li><a href="About.html">About</a></li>
-							<li><a href="Contact.html">Contact</a></li>
+							<li><a href="/films">Films</a></li>
+							<li><a href="/about">About</a></li>
+							<li><a href="/contact">Contact</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.instagram.com/hasanalrash/" target="_blank" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
@@ -76,7 +76,7 @@
 										<img src="images/shortord.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="Films.html" class="link boldFont">FILMS</a></h3>
+										<h3><a href="/films" class="link boldFont">FILMS</a></h3>
 										<p>Step into my creative world of short films.</p>
 									</header>
 								</article>
@@ -86,7 +86,7 @@
 										<img src="images/HasanLighting.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="About.html" class="link boldFont">ABOUT</a></h3>
+										<h3><a href="/about" class="link boldFont">ABOUT</a></h3>
 										<p>Get to know the person behind the camera.</p>
 									</header>
 								</article>
@@ -95,7 +95,7 @@
 										<img src="images/ContactPage.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="Contact.html" class="link boldFont">CONTACT</a></h3>
+										<h3><a href="/contact" class="link boldFont">CONTACT</a></h3>
 										<p>Reach out for enquiries, collaborations, or opportunities.</p>
 									</header>
 								</article>
