--- a/contact.html
+++ b/contact.html
@@ -35,8 +35,8 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="/">Home</a></li>
-							<li><a href="Films.html">Films</a></li>
-							<li><a href="About.html">About</a></li>
+							<li><a href="/films">Films</a></li>
+							<li><a href="/about">About</a></li>
 							<li><p class="currentlyOnPage">Contact</p></li>
 						</ul>
 						<ul class="icons">
