--- a/films.html
+++ b/films.html
@@ -32,8 +32,8 @@
 					<ul class="links">
 						<li><a href="/">Home</a></li>
 						<li><p class="currentlyOnPage">Films</p></li>
-						<li><a href="About.html">About</a></li>
-						<li><a href="Contact.html">Contact</a></li>
+						<li><a href="/about">About</a></li>
+						<li><a href="/contact">Contact</a></li>
 					</ul>
 					<ul class="icons">
 						<li><a href="https://www.instagram.com/hasanalrash/" target="_blank" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
