--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
 										<p class="responsive-text">In his free time, Hasan enjoys portrait sketching, photography, and exploring diverse literature, all of which fuel his creative vision for making films that resonate deeply with audiences.</p>
 
 										<div style="width: 100%; display: flex; justify-content: center; align-items: center;">
-											<a href="Contact.html" class="button" style="display: block; text-align: center; text-decoration: none; width: 40%;">Contact</a>
+											<a href="/contact" class="button" style="display: block; text-align: center; text-decoration: none; width: 40%;">Contact</a>
 										</div>
 
 									</div>
