Added socials to contact

--- a/contact.html
+++ b/contact.html
@@ -73,6 +73,12 @@
 									<h3>Email</h3>
 									<a href="mailto:hasanal-rashed@hotmail.com" class="email-link">hasanal-rashed@hotmail.com</a>
 								</div>
+
+								<ul class="icons" style="margin-top: 10%">
+									<li><a href="https://www.instagram.com/hasanalrash/" target="_blank" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://www.linkedin.com/in/hasan-al-rashed/" target="_blank" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://www.youtube.com/@hasanalrashed" target="_blank" class="icon brands alt fa-youtube"><span class="label">Youtube</span></a></li>
+								</ul>
 							</section>
 
 						</section>
